# c2hs-bug-demo

./: .gitignore  README.md  c2hs-bug-demo.cabal
app/: Main.hs
cbits/: foo.c  foo.h
src/: Lib.chs
