cabal-version:          2.4
name:                   c2hs-bug-demo
version:                0.0.0.0

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  exposed-modules:      Lib
  include-dirs:         cbits
  c-sources:            cbits/foo.c
  ghc-options:          -Wall
                        -Wcompat
                        -Widentities
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        --Wmissing-export-lists
                        --Wmissing-import-lists
                        -Wnoncanonical-monad-instances
                        -Wnoncanonical-monadfail-instances
                        -Wpartial-fields
                        -Wredundant-constraints
                        -fdefer-typed-holes
  build-depends:        base

executable c2hs-bug-demo
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall
                        -Wcompat
                        -Widentities
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        --Wmissing-export-lists
                        --Wmissing-import-lists
                        -Wnoncanonical-monad-instances
                        -Wnoncanonical-monadfail-instances
                        -Wpartial-fields
                        -Wredundant-constraints
                        -fdefer-typed-holes
                        -rtsopts
                        -threaded
  build-depends:        base
                      , c2hs-bug-demo
